--- a/package.json
+++ b/package.json
@@ -8,11 +8,16 @@
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
-    "@types/react": "^16.9.53",
-    "@types/react-dom": "^16.9.8",
+    "@types/react": "^16.14.2",
+    "@types/react-dom": "^16.9.10",
+    "bootstrap": "^4.6.0",
+    "jquery": "^3.5.1",
+    "node-sass": "^5.0.0",
+    "popper.js": "^1.16.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "reactstrap": "^8.9.0",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
   },
