--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
     "bootstrap": "^4.6.0",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
     "node-sass": "^5.0.0",
     "popper.js": "^1.16.1",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
     "reactstrap": "^8.9.0",
